--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_API_URL="https://api.github.com/"
+GITHUB_API_VERSION="2022-11-28"
+GITHUB_ACCESS_TOKEN=""
